// Style coverage drift gate. For every committed style-fixture, run
// `convertMapboxStyle` with a `coverage` collector attached and
// snapshot the per-source / per-layer outcome. Drift surfaces in PR
// diffs: a paint property newly handled by the converter flips a
// layer from 'lossy' to 'converted'; a regressed warning flips it
// back.
//
// Sibling artefact: __coverage__/SUMMARY.md — a human-readable totals
// rollup written in afterAll, committed alongside the snapshot.
//
// To refresh fixtures see fixtures/REFRESH.md.

import { describe, it, expect, afterAll } from 'vitest'
import { readFileSync, writeFileSync, mkdirSync } from 'node:fs'
import { join, dirname } from 'node:path'
import { fileURLToPath } from 'node:url'
import { convertMapboxStyle, type StyleCoverage } from '../convert/mapbox-to-xgis'

const HERE = dirname(fileURLToPath(import.meta.url))
const FIX = join(HERE, 'fixtures')
const OUT = join(HERE, '__coverage__')

const FIXTURES = [
  'maplibre-demotiles',
  'openfreemap-bright',
  'openfreemap-liberty',
  'openfreemap-positron',
] as const

const collected: Record<string, StyleCoverage> = {}

describe('style coverage', () => {
  for (const name of FIXTURES) {
    it(`${name} coverage matches snapshot`, () => {
      const style = JSON.parse(readFileSync(join(FIX, `${name}.json`), 'utf8'))
      const coverage: StyleCoverage = { sources: [], layers: [], warnings: [] }
      convertMapboxStyle(style, { coverage })
      collected[name] = coverage
      expect(coverage).toMatchSnapshot()
    })
  }

  afterAll(() => {
    mkdirSync(OUT, { recursive: true })
    writeFileSync(join(OUT, 'SUMMARY.md'), renderSummary(collected))
  })
})

function renderSummary(all: Record<string, StyleCoverage>): string {
  const lines: string[] = []
  lines.push('# Style coverage summary')
  lines.push('')
  lines.push('Auto-generated by `style-coverage-report.test.ts`. Do not edit by hand —')
  lines.push('refresh by running `bun x vitest run compiler/src/__tests__/style-coverage-report.test.ts`.')
  lines.push('')
  lines.push('| Fixture | Sources | Layers | Converted | Lossy | Skipped |')
  lines.push('|---|---:|---:|---:|---:|---:|')
  for (const name of Object.keys(all).sort()) {
    const c = all[name]!
    const total = c.layers.length
    const converted = c.layers.filter(l => l.action === 'converted').length
    const lossy = c.layers.filter(l => l.action === 'lossy').length
    const skipped = c.layers.filter(l => l.action === 'skipped').length
    lines.push(`| ${name} | ${c.sources.length} | ${total} | ${converted} | ${lossy} | ${skipped} |`)
  }
  lines.push('')

  for (const name of Object.keys(all).sort()) {
    const c = all[name]!
    lines.push(`## ${name}`)
    lines.push('')

    const byTypeSkipped = bucketByType(c.layers.filter(l => l.action === 'skipped'))
    const byTypeLossy = bucketByType(c.layers.filter(l => l.action === 'lossy'))
    if (byTypeSkipped.size > 0) {
      lines.push('### Skipped layer types')
      lines.push('')
      for (const [t, count] of [...byTypeSkipped].sort((a, b) => b[1] - a[1])) {
        lines.push(`- \`${t}\` × ${count}`)
      }
      lines.push('')
    }
    if (byTypeLossy.size > 0) {
      lines.push('### Lossy layer types')
      lines.push('')
      for (const [t, count] of [...byTypeLossy].sort((a, b) => b[1] - a[1])) {
        lines.push(`- \`${t}\` × ${count}`)
      }
      lines.push('')
    }
  }

  return lines.join('\n') + '\n'
}

function bucketByType(layers: { type: string }[]): Map<string, number> {
  const m = new Map<string, number>()
  for (const l of layers) m.set(l.type, (m.get(l.type) ?? 0) + 1)
  return m
}
