// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`style coverage > maplibre-demotiles coverage matches snapshot 1`] = `
{
  "layers": [
    {
      "action": "converted",
      "layerId": "background",
      "reasons": [],
      "type": "background",
    },
    {
      "action": "converted",
      "layerId": "coastline",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "countries-fill",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "countries-boundary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "geolines",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "geolines-label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "countries-label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "crimea-fill",
      "reasons": [],
      "type": "fill",
    },
  ],
  "sources": [
    {
      "action": "converted",
      "id": "maplibre",
      "reasons": [],
      "type": "vector",
    },
    {
      "action": "lossy",
      "id": "crimea",
      "reasons": [
        "GeoJSON source "crimea" has inline data — emitted as no-URL stub; call map.setSourceData() after run().",
      ],
      "type": "geojson",
    },
  ],
  "warnings": [
    "GeoJSON source "crimea" has inline data — emitted as no-URL stub; call map.setSourceData() after run().",
  ],
}
`;

exports[`style coverage > openfreemap-bright coverage matches snapshot 1`] = `
{
  "layers": [
    {
      "action": "converted",
      "layerId": "background",
      "reasons": [],
      "type": "background",
    },
    {
      "action": "converted",
      "layerId": "landcover-glacier",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-residential",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-suburb",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-commercial",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-industrial",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-cemetery",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-hospital",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-school",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse-railway",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "park",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover-wood",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover-grass",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover-grass-park",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "waterway_tunnel",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway-other",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway-other-intermittent",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway-stream-canal",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway-stream-canal-intermittent",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway-river",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway-river-intermittent",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "water",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "water-intermittent",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover-ice-shelf",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover-sand",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "building",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "lossy",
      "layerId": "building-top",
      "reasons": [
        "Layer "building-top" — ignored paint properties: fill-translate",
      ],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "tunnel-service-track-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-motorway-link-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-minor-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-link-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-secondary-tertiary-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-trunk-primary-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-motorway-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-path",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-motorway-link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-service-track",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-minor",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-secondary-tertiary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-trunk-primary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-motorway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel-railway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "ferry",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-taxiway-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-runway-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-area",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "aeroway-taxiway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-runway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_area_pier",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "road_pier",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-area",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "highway-motorway-link-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-link-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-minor-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-secondary-tertiary-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-primary-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-trunk-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-motorway-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-path",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-motorway-link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-minor",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-secondary-tertiary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-primary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-trunk",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway-motorway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway-transit",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway-transit-hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway-service",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway-service-hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway-hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-motorway-link-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-link-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-secondary-tertiary-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-trunk-primary-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-motorway-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-minor-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-path-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-path",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-motorway-link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-minor",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-secondary-tertiary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-trunk-primary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-motorway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-railway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge-railway-hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "cablecar",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "cablecar-dash",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_3",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_2",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_disputed",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "lossy",
      "layerId": "road_oneway",
      "reasons": [
        "Symbol layer "road_oneway" — ignored properties (Batch 1d/1e+): icon-opacity, icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "road_oneway_opposite",
      "reasons": [
        "Symbol layer "road_oneway_opposite" — ignored properties (Batch 1d/1e+): icon-opacity, icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "waterway_line_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "water_name_point_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "water_name_line_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_r20",
      "reasons": [
        "Symbol layer "poi_r20" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_r7",
      "reasons": [
        "Symbol layer "poi_r7" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_r1",
      "reasons": [
        "Symbol layer "poi_r1" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_transit",
      "reasons": [
        "Symbol layer "poi_transit" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-path",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-minor",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-major",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "highway-shield-non-us",
      "reasons": [
        "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "highway-shield-us-interstate",
      "reasons": [
        "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "road_shield_us",
      "reasons": [
        "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "airport",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_other",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_village",
      "reasons": [
        "Symbol layer "label_village" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_town",
      "reasons": [
        "Symbol layer "label_town" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_state",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_city",
      "reasons": [
        "Symbol layer "label_city" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_city_capital",
      "reasons": [
        "Symbol layer "label_city_capital" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_3",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_2",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_1",
      "reasons": [],
      "type": "symbol",
    },
  ],
  "sources": [
    {
      "action": "converted",
      "id": "ne2_shaded",
      "reasons": [],
      "type": "raster",
    },
    {
      "action": "converted",
      "id": "openmaptiles",
      "reasons": [],
      "type": "vector",
    },
  ],
  "warnings": [
    "Layer "building-top" — ignored paint properties: fill-translate",
    "Symbol layer "road_oneway" — ignored properties (Batch 1d/1e+): icon-opacity, icon-rotation-alignment",
    "Symbol layer "road_oneway_opposite" — ignored properties (Batch 1d/1e+): icon-opacity, icon-rotation-alignment",
    "Symbol layer "poi_r20" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "poi_r7" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "poi_r1" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "poi_transit" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "label_village" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_town" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_city" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_city_capital" — data-driven icon-image not yet supported (Phase B+).",
  ],
}
`;

exports[`style coverage > openfreemap-liberty coverage matches snapshot 1`] = `
{
  "layers": [
    {
      "action": "converted",
      "layerId": "background",
      "reasons": [],
      "type": "background",
    },
    {
      "action": "converted",
      "layerId": "natural_earth",
      "reasons": [],
      "type": "raster",
    },
    {
      "action": "converted",
      "layerId": "park",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "park_outline",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "landuse_residential",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_wood",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_grass",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_ice",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "lossy",
      "layerId": "landcover_wetland",
      "reasons": [
        "Layer "landcover_wetland" — fill-pattern declared without fill-color; the layer's only visual is a bitmap fill which is not yet supported (Batch 2 — sprite atlas). The layer will render empty until the atlas pipeline lands.",
        "Layer "landcover_wetland" — ignored paint properties: fill-translate-anchor",
      ],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse_pitch",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse_track",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse_cemetery",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse_hospital",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse_school",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "lossy",
      "layerId": "waterway_tunnel",
      "reasons": [
        "Layer "waterway_tunnel" — ignored paint properties: line-gap-width",
      ],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway_river",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway_other",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "water",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_sand",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "aeroway_fill",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "aeroway_runway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway_taxiway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_motorway_link_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_service_track_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_link_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_street_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_secondary_tertiary_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_trunk_primary_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_motorway_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_path_pedestrian",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_motorway_link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_service_track",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_minor",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_secondary_tertiary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_trunk_primary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_motorway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_major_rail",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_major_rail_hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_transit_rail",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_transit_rail_hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "lossy",
      "layerId": "road_area_pattern",
      "reasons": [
        "Layer "road_area_pattern" — fill-pattern declared without fill-color; the layer's only visual is a bitmap fill which is not yet supported (Batch 2 — sprite atlas). The layer will render empty until the atlas pipeline lands.",
      ],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "road_motorway_link_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_service_track_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_link_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_minor_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_secondary_tertiary_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_trunk_primary_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_motorway_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_path_pedestrian",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_motorway_link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_service_track",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_minor",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_secondary_tertiary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_trunk_primary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_motorway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_major_rail",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_major_rail_hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_transit_rail",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_transit_rail_hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_one_way_arrow",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "road_one_way_arrow_opposite",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "bridge_motorway_link_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_service_track_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_link_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_street_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_path_pedestrian_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_secondary_tertiary_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_trunk_primary_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_motorway_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_path_pedestrian",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_motorway_link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_service_track",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_link",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_street",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_secondary_tertiary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_trunk_primary",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_motorway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_major_rail",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_major_rail_hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_transit_rail",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "bridge_transit_rail_hatching",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "building",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "building-3d",
      "reasons": [],
      "type": "fill-extrusion",
    },
    {
      "action": "converted",
      "layerId": "boundary_3",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_2",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_disputed",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway_line_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "water_name_point_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "water_name_line_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_r20",
      "reasons": [
        "Symbol layer "poi_r20" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_r7",
      "reasons": [
        "Symbol layer "poi_r7" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_r1",
      "reasons": [
        "Symbol layer "poi_r1" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "poi_transit",
      "reasons": [
        "Symbol layer "poi_transit" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-path",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-minor",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-major",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "highway-shield-non-us",
      "reasons": [
        "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "highway-shield-us-interstate",
      "reasons": [
        "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "road_shield_us",
      "reasons": [
        "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "airport",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_other",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_village",
      "reasons": [
        "Symbol layer "label_village" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_town",
      "reasons": [
        "Symbol layer "label_town" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_state",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_city",
      "reasons": [
        "Symbol layer "label_city" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_city_capital",
      "reasons": [
        "Symbol layer "label_city_capital" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_3",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_2",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_1",
      "reasons": [],
      "type": "symbol",
    },
  ],
  "sources": [
    {
      "action": "converted",
      "id": "ne2_shaded",
      "reasons": [],
      "type": "raster",
    },
    {
      "action": "converted",
      "id": "openmaptiles",
      "reasons": [],
      "type": "vector",
    },
  ],
  "warnings": [
    "Layer "landcover_wetland" — fill-pattern declared without fill-color; the layer's only visual is a bitmap fill which is not yet supported (Batch 2 — sprite atlas). The layer will render empty until the atlas pipeline lands.",
    "Layer "landcover_wetland" — ignored paint properties: fill-translate-anchor",
    "Layer "waterway_tunnel" — ignored paint properties: line-gap-width",
    "Layer "road_area_pattern" — fill-pattern declared without fill-color; the layer's only visual is a bitmap fill which is not yet supported (Batch 2 — sprite atlas). The layer will render empty until the atlas pipeline lands.",
    "Symbol layer "poi_r20" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "poi_r7" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "poi_r1" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "poi_transit" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "label_village" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_town" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_city" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_city_capital" — data-driven icon-image not yet supported (Phase B+).",
  ],
}
`;

exports[`style coverage > openfreemap-positron coverage matches snapshot 1`] = `
{
  "layers": [
    {
      "action": "converted",
      "layerId": "background",
      "reasons": [],
      "type": "background",
    },
    {
      "action": "converted",
      "layerId": "park",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "water",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_ice_shelf",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_glacier",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landuse_residential",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "landcover_wood",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "waterway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "building",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "tunnel_motorway_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "tunnel_motorway_inner",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-taxiway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-runway-casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "aeroway-area",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "aeroway-runway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "road_area_pier",
      "reasons": [],
      "type": "fill",
    },
    {
      "action": "converted",
      "layerId": "road_pier",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_path",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_minor",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_major_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_major_inner",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_major_subtle",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_motorway_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_motorway_inner",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_motorway_subtle",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway_transit",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway_transit_dashline",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway_service",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway_service_dashline",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "railway_dashline",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_motorway_bridge_casing",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "highway_motorway_bridge_inner",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_3",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_2",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "boundary_disputed",
      "reasons": [],
      "type": "line",
    },
    {
      "action": "converted",
      "layerId": "waterway_line_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "water_name_point_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "water_name_line_label",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-path",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-minor",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "highway-name-major",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "highway-shield-non-us",
      "reasons": [
        "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "highway-shield-us-interstate",
      "reasons": [
        "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "road_shield_us",
      "reasons": [
        "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
        "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
        "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "airport",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_other",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_village",
      "reasons": [
        "Symbol layer "label_village" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_town",
      "reasons": [
        "Symbol layer "label_town" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_state",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_city",
      "reasons": [
        "Symbol layer "label_city" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "lossy",
      "layerId": "label_city_capital",
      "reasons": [
        "Symbol layer "label_city_capital" — data-driven icon-image not yet supported (Phase B+).",
      ],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_3",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_2",
      "reasons": [],
      "type": "symbol",
    },
    {
      "action": "converted",
      "layerId": "label_country_1",
      "reasons": [],
      "type": "symbol",
    },
  ],
  "sources": [
    {
      "action": "converted",
      "id": "ne2_shaded",
      "reasons": [],
      "type": "raster",
    },
    {
      "action": "converted",
      "id": "openmaptiles",
      "reasons": [],
      "type": "vector",
    },
  ],
  "warnings": [
    "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-non-us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-non-us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "highway-shield-us-interstate" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "highway-shield-us-interstate" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "road_shield_us" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "road_shield_us" — ignored properties (Batch 1d/1e+): icon-rotation-alignment",
    "Symbol layer "label_village" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_town" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_city" — data-driven icon-image not yet supported (Phase B+).",
    "Symbol layer "label_city_capital" — data-driven icon-image not yet supported (Phase B+).",
  ],
}
`;
